优化检索
